@@ -8,6 +8,6 @@ version=@PACKAGE_VERSION@
 Name: UMWSU library
 Description: UMWSU library
 Version: ${version} 
-Requires: gmodule-2.0 glib-2.0
+Requires: gmodule-2.0 glib-2.0 libxml-2.0
 Libs:-L${libdir} -lumwsu -lmagic
 Cflags: -I${includedir} 
