@@ -1,6 +1,6 @@
 lib_LTLIBRARIES=libumwsu.la
 
-libumwsu_la_SOURCES=module.c modulep.h dir.c dir.h umwsu.c
+libumwsu_la_SOURCES=dir.c dir.h module.c modulep.h status.c statusp.h umwsu.c
 
 AM_CPPFLAGS= -DLIBUMWSU_MODULES_PATH='"$(pkglibdir)/modules"'
 libumwsu_la_CFLAGS= -I$(top_srcdir)/include
@@ -8,4 +8,7 @@ libumwsu_la_LIBADD=
 
 libumwsu_la_CFLAGS+= @GMODULE2_CFLAGS@
 libumwsu_la_LIBADD+= @GMODULE2_LIBS@
+
+libumwsu_la_CFLAGS+= @LIBXML2_CFLAGS@
+libumwsu_la_LIBADD+= @LIBXML2_LIBS@
 
